--- a/src/main/res/ConfigBuilder.fxml
+++ b/src/main/res/ConfigBuilder.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +17,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@textfields.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.insanusmokrassar.AutoPostBotConfigBuilder.controllers.GlobalConfigController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.insanusmokrassar.AutoPostBotConfigBuilder.controllers.GlobalConfigController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
@@ -37,9 +38,9 @@
         </MenuBar>
     </top>
     <center>
-        <Accordion BorderPane.alignment="CENTER">
+        <Accordion>
             <panes>
-                <TitledPane animated="false" text="Main settings">
+                <TitledPane text="Main settings">
                     <content>
                         <BorderPane>
                             <center>
@@ -158,12 +159,20 @@
                         </BorderPane>
                     </content>
                 </TitledPane>
-                <TitledPane animated="false" text="Plugins">
-                    <ScrollPane>
-                        <VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" />
-                    </ScrollPane>
+                <TitledPane text="Plugins">
+               <content>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                     <content>
+                        <fx:include fx:id="pluginManager" source="PluginsManager.fxml" />
+                     </content>
+                  </ScrollPane>
+               </content>
                 </TitledPane>
             </panes>
         </Accordion>
     </center>
+   <stylesheets>
+      <URL value="@textfields.css" />
+      <URL value="@common.css" />
+   </stylesheets>
 </BorderPane>
